# quackpanda

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: testrun.py
quackpanda/: __init__.py  core.py
tests/: test_core.py  test_deregister_table.py
