[tool.poetry]
name = "quackpanda"
version = "0.1.1"
description = "QuackPanda: SQL Capability for Pandas using DuckDB"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "1.5.3"
duckdb = "^0.8.1"
pyarrow = "^13.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
black = "^22.1.0"
flake8 = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
